docs/api/qiskit/0.19/qiskit.aqua.components.optimizers.DIRECT_L_RAND.mdx
---
title: DIRECT_L_RAND (v0.19)
description: API reference for qiskit.aqua.components.optimizers.DIRECT_L_RAND in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.optimizers.DIRECT_L_RAND
---

<span id="direct-l-rand" />

# DIRECT\_L\_RAND

<Class id="qiskit.aqua.components.optimizers.DIRECT_L_RAND" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/optimizers/nlopts/direct_l_rand.py" signature="DIRECT_L_RAND(max_evals=1000)" modifiers="class">
  DIviding RECTangles Locally-biased Randomized optimizer.

  DIRECT-L RAND is the “locally biased” variant with some randomization in near-tie decisions. See also [`DIRECT_L`](qiskit.aqua.components.optimizers.DIRECT_L "qiskit.aqua.components.optimizers.DIRECT_L")

  NLopt global optimizer, derivative-free. For further detail, please refer to [http://nlopt.readthedocs.io/en/latest/NLopt\_Algorithms/#direct-and-direct-l](http://nlopt.readthedocs.io/en/latest/NLopt_Algorithms/#direct-and-direct-l)

  **Parameters**

  **max\_evals** (`int`) – Maximum allowed number of function evaluations.

  **Raises**

  **NameError** – NLopt library not installed.

  ## Attributes

  <span id="direct-l-rand-bounds-support-level" />

  ### bounds\_support\_level

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.bounds_support_level">
    Returns bounds support level
  </Attribute>

  <span id="direct-l-rand-gradient-support-level" />

  ### gradient\_support\_level

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.gradient_support_level">
    Returns gradient support level
  </Attribute>

  <span id="direct-l-rand-initial-point-support-level" />

  ### initial\_point\_support\_level

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.initial_point_support_level">
    Returns initial point support level
  </Attribute>

  <span id="direct-l-rand-is-bounds-ignored" />

  ### is\_bounds\_ignored

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_bounds_ignored">
    Returns is bounds ignored
  </Attribute>

  <span id="direct-l-rand-is-bounds-required" />

  ### is\_bounds\_required

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_bounds_required">
    Returns is bounds required
  </Attribute>

  <span id="direct-l-rand-is-bounds-supported" />

  ### is\_bounds\_supported

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_bounds_supported">
    Returns is bounds supported
  </Attribute>

  <span id="direct-l-rand-is-gradient-ignored" />

  ### is\_gradient\_ignored

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_gradient_ignored">
    Returns is gradient ignored
  </Attribute>

  <span id="direct-l-rand-is-gradient-required" />

  ### is\_gradient\_required

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_gradient_required">
    Returns is gradient required
  </Attribute>

  <span id="direct-l-rand-is-gradient-supported" />

  ### is\_gradient\_supported

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_gradient_supported">
    Returns is gradient supported
  </Attribute>

  <span id="direct-l-rand-is-initial-point-ignored" />

  ### is\_initial\_point\_ignored

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_initial_point_ignored">
    Returns is initial point ignored
  </Attribute>

  <span id="direct-l-rand-is-initial-point-required" />

  ### is\_initial\_point\_required

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_initial_point_required">
    Returns is initial point required
  </Attribute>

  <span id="direct-l-rand-is-initial-point-supported" />

  ### is\_initial\_point\_supported

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.is_initial_point_supported">
    Returns is initial point supported
  </Attribute>

  <span id="direct-l-rand-setting" />

  ### setting

  <Attribute id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.setting">
    Return setting
  </Attribute>

  ## Methods

  <span id="direct-l-rand-get-nlopt-optimizer" />

  ### get\_nlopt\_optimizer

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.get_nlopt_optimizer" signature="DIRECT_L_RAND.get_nlopt_optimizer()">
    Return NLopt optimizer type

    **Return type**

    `NLoptOptimizerType`
  </Function>

  <span id="direct-l-rand-get-support-level" />

  ### get\_support\_level

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.get_support_level" signature="DIRECT_L_RAND.get_support_level()">
    return support level dictionary
  </Function>

  <span id="direct-l-rand-gradient-num-diff" />

  ### gradient\_num\_diff

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.gradient_num_diff" signature="DIRECT_L_RAND.gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)" modifiers="static">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  <span id="direct-l-rand-optimize" />

  ### optimize

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.optimize" signature="DIRECT_L_RAND.optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Perform optimization.

    **Parameters**

    *   **num\_vars** (*int*) – Number of parameters to be optimized.
    *   **objective\_function** (*callable*) – A function that computes the objective function.
    *   **gradient\_function** (*callable*) – A function that computes the gradient of the objective function, or None if not available.
    *   **variable\_bounds** (*list\[(float, float)]*) – List of variable bounds, given as pairs (lower, upper). None means unbounded.
    *   **initial\_point** (*numpy.ndarray\[float]*) – Initial point.

    **Returns**

    **point, value, nfev**

    point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

    **Raises**

    **ValueError** – invalid input
  </Function>

  <span id="direct-l-rand-print-options" />

  ### print\_options

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.print_options" signature="DIRECT_L_RAND.print_options()">
    Print algorithm-specific options.
  </Function>

  <span id="direct-l-rand-set-max-evals-grouped" />

  ### set\_max\_evals\_grouped

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.set_max_evals_grouped" signature="DIRECT_L_RAND.set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  <span id="direct-l-rand-set-options" />

  ### set\_options

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.set_options" signature="DIRECT_L_RAND.set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  <span id="direct-l-rand-wrap-function" />

  ### wrap\_function

  <Function id="qiskit.aqua.components.optimizers.DIRECT_L_RAND.wrap_function" signature="DIRECT_L_RAND.wrap_function(function, args)" modifiers="static">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>
</Class>

